check_errors.txt
    Checking rustview v0.1.0 (C:\_new_ai_project\uriviewer)
error[E0433]: failed to resolve: could not find `hotkeys` in the crate root
  --> src\app.rs:33:46
   |
33 |     pub(crate) hotkey_manager: Option<crate::hotkeys::HotKeyManager>,
   |                                              ^^^^^^^ could not find `hotkeys` in the crate root

error[E0433]: failed to resolve: could not find `capture` in the crate root
  --> src\app.rs:36:45
   |
36 |     pub(crate) captured_screens: Vec<crate::capture::CapturedScreen>,
   |                                             ^^^^^^^ could not find `capture` in the crate root

error[E0433]: failed to resolve: could not find `tray` in the crate root
   --> src\app.rs:101:27
    |
101 |         let tray = crate::tray::create_tray(None);
    |                           ^^^^ could not find `tray` in the crate root

error[E0433]: failed to resolve: could not find `hotkeys` in the crate root
   --> src\app.rs:104:26
    |
104 |         let hkm = crate::hotkeys::HotKeyManager::new();
    |                          ^^^^^^^ could not find `hotkeys` in the crate root

error[E0433]: failed to resolve: could not find `hotkeys` in the crate root
   --> src\app.rs:106:38
    |
106 |             if let Some(hk) = crate::hotkeys::create_hotkey(mods, key, 1) {
    |                                      ^^^^^^^ could not find `hotkeys` in the crate root

error[E0433]: failed to resolve: could not find `hotkeys` in the crate root
   --> src\app.rs:111:38
    |
111 |             if let Some(hk) = crate::hotkeys::create_hotkey(mods, key, 2) {
    |                                      ^^^^^^^ could not find `hotkeys` in the crate root

error[E0433]: failed to resolve: could not find `hotkeys` in the crate root
   --> src\app.rs:228:82
    |
228 |                     if let (Some(hkm), Some(hk)) = (&self.hotkey_manager, crate::hotkeys::create_hotkey(mods, raw_code, hk_id)) {
    |                                                                                  ^^^^^^^ could not find `hotkeys` in the crate root

error[E0433]: failed to resolve: could not find `capture` in the crate root
   --> src\app.rs:507:40
    |
507 |         self.captured_screens = crate::capture::capture_all_screens();
    |                                        ^^^^^^^ could not find `capture` in the crate root

error[E0433]: failed to resolve: could not find `ClickType` in `tray_icon`
   --> src\app.rs:527:47
    |
527 |             if event.click_type == tray_icon::ClickType::Double {
    |                                               ^^^^^^^^^ could not find `ClickType` in `tray_icon`

warning: unused imports: `CMF_DEFAULTONLY` and `CMF_VERBSONLY`
  --> src\shell_ext.rs:19:5
   |
19 |     CMF_DEFAULTONLY, CMF_VERBSONLY, CMINVOKECOMMANDINFO, HDROP,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `keys_iter` found for reference `&InputState` in the current scope
   --> src\app.rs:204:29
    |
204 |                 let key = i.keys_iter().next();
    |                             ^^^^^^^^^ method not found in `&InputState`

error[E0282]: type annotations needed
   --> src\app.rs:229:33
    |
229 |                         let _ = hkm.register(hk);
    |                                 ^^^ cannot infer type

error[E0599]: no method named `any_clicked` found for struct `PointerState` in the current scope
   --> src\app.rs:444:52
    |
444 |                         if ctx.input(|i| i.pointer.any_clicked()) {
    |                                                    ^^^^^^^^^^^
    |
help: there is a method `any_click` with a similar name
    |
444 -                         if ctx.input(|i| i.pointer.any_clicked()) {
444 +                         if ctx.input(|i| i.pointer.any_click()) {
    |

error[E0599]: the method `clone` exists for enum `std::option::Option<types::SelectionState>`, but its trait bounds were not satisfied
   --> src\app.rs:456:62
    |
456 |             if let Some(mut sel) = self.view_state.selection.clone() {
    |                                                              ^^^^^ method cannot be called on `std::option::Option<types::SelectionState>` due to unsatisfied trait bounds
    |
   ::: src\types.rs:123:1
    |
123 | pub struct SelectionState {
    | ------------------------- doesn't satisfy `types::SelectionState: Clone`
    |
   ::: C:\Users\uripapa7\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\option.rs:600:1
    |
600 | pub enum Option<T> {
    | ------------------ doesn't satisfy `std::option::Option<types::SelectionState>: Clone`
    |
    = note: the following trait bounds were not satisfied:
            `types::SelectionState: Clone`
            which is required by `std::option::Option<types::SelectionState>: Clone`
help: consider annotating `types::SelectionState` with `#[derive(Clone)]`
   --> src\types.rs:123:1
    |
123 + #[derive(Clone)]
124 | pub struct SelectionState {
    |

error[E0609]: no field `click_type` on type `TrayIconEvent`
   --> src\app.rs:527:22
    |
527 |             if event.click_type == tray_icon::ClickType::Double {
    |                      ^^^^^^^^^^ unknown field

warning: value assigned to `menu_index` is never read
   --> src\shell_ext.rs:220:21
    |
220 |                     menu_index += 1;
    |                     ^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0433, E0599, E0609.
For more information about an error, try `rustc --explain E0282`.
warning: `rustview` (lib) generated 2 warnings
error: could not compile `rustview` (lib) due to 14 previous errors; 2 warnings emitted
